<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_transparent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtConfrim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_confirm_job_remove"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConfrim"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_remove_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:background="@drawable/btn_filled"
            android:padding="@dimen/large_padding_margin"
            android:text="@string/btn_yes"
            android:textColor="@drawable/btn_filled_txt_color"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_remove_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/very_large_padding_margin"
            android:layout_weight="40"
            android:background="@drawable/btn_filled"
            android:padding="@dimen/large_padding_margin"
            android:text="@string/btn_no"
            android:textColor="@drawable/btn_filled_txt_color"
            android:textSize="24sp" />
    </LinearLayout>

</RelativeLayout>
