<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/lbl_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_error"
            android:padding="@dimen/large_padding_margin"
            android:text="ERROR!"
            android:textColor="@color/white"
            android:textSize="@dimen/msg_txt_size" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/msg_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingTop="10dp"
            android:text="@string/msg_email_mobile_password_error"
            android:textColor="@color/err_msg_color"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_filled"
            android:hint="@string/lbl_email_or_mobile"
            android:inputType="textEmailAddress"
            android:padding="@dimen/large_padding_margin"
            android:textAppearance="@style/EditTextStyle"
            android:textColor="@color/detail_text_color"
            android:textSize="@dimen/edit_text_size" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding_margin"
            android:background="@drawable/bg_filled"
            android:hint="@string/lbl_password"
            android:inputType="text"
            android:padding="@dimen/large_padding_margin"
            android:textAppearance="@style/EditTextStyle"
            android:textColor="@color/detail_text_color"
            android:textSize="@dimen/edit_text_size" />

        <LinearLayout

            android:id="@+id/rmb_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_remember"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:button="@drawable/bg_checkbox"
                    android:checked="false" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/lbl_remember_me"
                android:textColor="@color/edit_text_color"
                android:textSize="16sp" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_filled"
            android:padding="@dimen/big_btn_padding"
            android:stateListAnimator="@null"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_filled_txt_color"
            android:textSize="@dimen/big_btn_txt_size" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/ic_bulb"
            android:drawablePadding="5dp"
            android:drawableTint="@color/color_gray_99"
            android:gravity="center_vertical"
            android:text="@string/lbl_forget_pwd"
            android:textColor="@color/color_gray_99"
            android:textSize="@dimen/edit_text_size" />

    </LinearLayout>
</ScrollView>





