<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddNewToolsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/app_bg_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight=".50"
                android:text="@string/tab_recently_added_tools"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btn_add_tool"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".25"
                android:background="@drawable/app_board"
                android:text="@string/btn_post_tool"
                android:textAllCaps="false"
                android:textColor="@color/color_gray_66"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_new_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".25"
                android:background="@drawable/app_board"
                android:text="@string/btn_new_search"
                android:textAllCaps="false"
                android:textColor="@color/color_gray_66"
                android:textSize="@dimen/tab_txt_size" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/msg_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topBar"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_success"
            android:padding="@dimen/medium_padding_margin"
            android:text="YOUR TOOL HAS BEEN ADDED"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_none_offers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/msg_success"
            android:gravity="center_horizontal"
            android:paddingTop="80dp"
            android:text="@string/none_added_tool"
            android:textSize="20sp"
            android:visibility="visible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_none_offers"
            android:layout_marginTop="15dp" />
    </RelativeLayout>

</FrameLayout>
