<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:background="@drawable/app_bg">

        <ImageView
            android:layout_width="@dimen/app_icon_width_height"
            android:layout_height="@dimen/app_icon_width_height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/app_middle_icon" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".65"
        android:background="@color/transparent"
        android:orientation="vertical"
        tools:context=".ui.ChangePasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/app_board"
                android:gravity="center"
                android:text="@string/title_activity_change_password"
                android:textColor="@color/title_color"
                android:textSize="@dimen/tab_txt_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lbl_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_error"
                android:padding="@dimen/large_padding_margin"
                android:text="ERROR!"
                android:textColor="@color/white"
                android:textSize="@dimen/msg_txt_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/msg_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_padding_margin"
                android:layout_marginRight="@dimen/large_padding_margin"
                android:layout_marginTop="15dp"
                android:paddingTop="@dimen/small_padding_margin"
                android:text="@string/msg_password_match_error"
                android:textColor="#000000"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_padding_margin"
                android:layout_marginRight="@dimen/large_padding_margin"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_filled"
                android:hint="@string/lbl_password"
                android:inputType="text"
                android:padding="@dimen/large_padding_margin"
                android:textColor="@color/detail_text_color"
                android:textSize="@dimen/edit_text_size" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_padding_margin"
                android:layout_marginRight="@dimen/large_padding_margin"
                android:layout_marginTop="@dimen/large_padding_margin"
                android:background="@drawable/bg_filled"
                android:hint="@string/lbl_retype_password"
                android:inputType="text"
                android:padding="@dimen/large_padding_margin"
                android:textColor="@color/detail_text_color"
                android:textSize="@dimen/edit_text_size" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="@dimen/large_padding_margin"
                android:layout_marginRight="@dimen/large_padding_margin"
                android:layout_marginTop="25dp"
                android:padding="@dimen/big_btn_padding"
                android:stateListAnimator="@null"
                android:background="@drawable/btn_filled"
                android:onClick="submitClicked"
                android:text="@string/btn_submit"
                android:textAllCaps="false"
                android:textColor="@drawable/btn_filled_txt_color"
                android:textSize="@dimen/big_btn_txt_size" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>